# hostaway-mcp

./: .dockerignore  .env.example  .env.example.secure  .eslintrc.security.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .test_api_key  API_KEYS_IMPLEMENTATION_SUMMARY.md  API_KEYS_QUICKSTART.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_SETUP_COMPLETE.md  CLOUDFLARE_TUNNEL_MANUAL_DNS.md  CLOUDFLARE_TUNNEL_SETUP.md  CONTEXT_PROTECTION.md  COVERAGE_METRICS.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SECURITY.md  DEPLOYMENT_SUCCESS.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.prod  FINAL_FIX.md  HOSTINGER_FILE_MANAGER_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  KEY_ROTATION_PLAN.md  LOCAL_TEST_RESULTS.md  MCP_CONNECTOR_SETUP.md  MCP_SERVER_COMPREHENSIVE_TEST_REPORT.md  MCP_SERVER_TEST_REPORT.md  MIDDLEWARE_TEST_SUMMARY.md  Makefile  PHASE_5_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  QUICK_DEPLOY.sh  QUICK_TEST_REFERENCE.md  README.md  (+47 more)
.automation/: .dockerignore  README.md
.automation/config/: dependency-graph.yaml  fix-definitions.yaml  worktree-config.yaml
.automation/docs/: LESSONS-LEARNED-MCP-MIGRATION.md  PR-8-LESSONS-LEARNED.md  SKILL-EVOLUTION-EXAMPLE-PR8.md  SKILL-EVOLUTION-SYSTEM-README.md
.automation/scripts/: cleanup.sh  fix-executor.sh  generate-report.sh  orchestrator.sh  pr-automation.sh  pre-pr-validate.sh  pre-push-validate.sh  quick-validate.sh  rollback.sh  state_manager.py  status.sh  test-runner.sh  track-skill-usage.sh  validate-config.sh  validate-deployment.sh  validate-implementation.sh  worktree-manager.sh
.automation/templates/: fix-template.j2  test-template.j2
.claude/agents/: hostaway-mcp-tester.md
.github/workflows/: README.md  auto-merge.yml  ci.yml  deploy-production.yml  deploy.yml
.specify/memory/: constitution.md
.vercel.backup/: project.json
dashboard/: .env.example  COMPONENT_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  middleware.ts  package.json  tsconfig.json  vercel.json
dashboard/.github/: DEPLOYMENT_TEST.txt
dashboard/app/: error.tsx  layout.tsx  page.tsx
dashboard/components/: DynamicBreadcrumb.tsx  dashboard-nav.tsx  error-boundary.tsx
dashboard/types/: supabase.ts
docs/: API_KEY_GENERATION.md  CLOUDFLARE_TUNNEL_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FASTAPI_MCP_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LOCAL_TESTING_GUIDE.md  MCP_AUDIT_SUMMARY.md  MCP_MIGRATION_GUIDE.md  MONITORING_OBSERVABILITY.md  OPENAPI_PAGINATION.md  PAGINATION_MIGRATION.md  ROLLBACK_PROCEDURE.md  SIMPLE_SETUP.md  TUNNEL_ISSUE_SUMMARY.md  cicd-deployment-guide.md  quickstart.md  testing-plan.md
docs/archive/: AMBIGUITY_RESOLUTIONS.md  CALCULATED_FINANCIALS_IMPLEMENTATION.md  DEBUG_SUMMARY.md  FINANCIAL_ENDPOINT_FINDINGS.md  KEY_ROTATION_PLAN.md  PROJECT_STATUS.md  STAGE_COMPLETE.md  code-review-report.md
scripts/: deploy.sh  mcp-client-wrapper.py  pre-push-check.sh  security-audit.sh  setup-cloudflare-tunnel-baliluxurystays.sh  setup-cloudflare-tunnel-manual-dns.sh  setup-cloudflare-tunnel.sh  setup-https-nginx.sh  setup_local_test_data.py  setup_test_data.sql  setup_test_data_simple.sql  start-ssh-tunnel.sh
specs/001-we-need-to/: completion-tasks.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-enhance-the-hostaway/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-we-need-to/: SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-we-need-to/: PHASE1_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-project-brownfield-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-overflow-safety-test-suite/: plan.md  research.md  spec.md  tasks.md
specs/007-so-we-need/: IMPLEMENTATION_COMPLETE.md  SETUP_GUIDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verify-setup.sh
specs/008-fix-issues-identified/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-add-api-level/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-we-need-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: dependencies.py  main.py
src/mcp/: auth.py  config.py  logging.py  security.py  server.py
src/models/: __init__.py  auth.py  bookings.py  errors.py  financial.py  listings.py  organization.py  pagination.py  summarization.py  summarized.py  token_budget.py
src/scripts/: generate_api_key.py
src/services/: config_service.py  credential_service.py  cursor_storage.py  financial_calculator.py  hostaway_client.py  pagination_service.py  rate_limiter.py  stripe_service.py  summarization_service.py  supabase_client.py  telemetry_service.py
src/testing/: __init__.py  hostaway_mocks.py  mock_client.py
src/utils/: __init__.py  cursor_codec.py  field_projector.py  token_estimator.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20251013000001_initial_schema.sql  20251013000002_rls_policies.sql  20251013000003_vault_setup.sql  20251013000004_functions.sql  20251013000005_fix_organization_insert_policy.sql  20251013000006_fix_org_members_policy.sql  20251013000007_fix_org_policy_final.sql  20251013000008_drop_recursive_select_policy.sql  20251013000009_add_stripe_customer_id.sql  20251015000001_create_api_keys_table.sql
test/: .gitignore  PAGINATION_TEST_RESULTS.md  PYTHON_MOCKING_APPROACH.md  hostaway.pagination.test.ts  package.json  setup.ts  tsconfig.json  vitest.config.ts
test/e2e/: .gitkeep
test/live/: .gitkeep
test/performance/: .gitkeep
test/utils/: .gitkeep  httpClient.ts  mcpClient.ts  tokenEstimator.ts
tests/: QUICK_START.md  TEST_COVERAGE_SUMMARY.md  conftest.py  conftest_pagination_fix.py  test_coverage_report.py
tests/automation/: __init__.py  test_dependency_resolver.py  test_fix_executor.py  test_orchestrator.py  test_rollback.py  test_worktree_manager.py
tests/database/: README.md  test_rls_policies.sql
tests/e2e/: test_complete_workflow.py
(+166 files in other folders)
